Revision history for SQL::Abstract

revision 1.74  2013-06-04
----------------------------
    - Fix insufficient parenthesis unroll during operator comparison
    - 'ORDER BY foo' and 'ORDER BY foo ASC' are now considered equal
      by default (with a switch to reenable old behavior when necessary)
    - Change parser to not eagerly slurp RHS expressions it doesn't recognize

revision 1.73  2012-07-10
----------------------------
    - Fix parsing of ORDER BY foo + ?
    - Stop filling in placeholders in `format-sql` since it does not support
      passing values for them anyway
    - Fix parsing of NOT EXISTS
    - Fix over-eager parenthesis unrolling
    - Fix deep recursion warnings while parsing obnoxiously long sql statements
    - Fix incorrect comparison of malformed lists
    - Fix incorrect reporting of mismatch-members in SQLA::Test
    - Migrate the -ident operator from DBIC into SQLA
    - Migrate the -value operator from DBIC into SQLA

revision 1.72  2010-12-21
----------------------------
    - Extra checks of search arguments for possible SQL injection attacks
    - Remove excess parentheses in debug SQL
    - Fix parsing of foo.* in SQLA::Tree
    - Fix bindtype fail when using -between with arrayrefref literals
    - Add handling for NULL for -in
    - The -nest operator has entered semi-deprecated status and has been
      undocumented. Please do not use it in new code

revision 1.71  2010-11-09
----------------------------
    - Add EXECUTING for clarity of long running SQL
    - Add "squash_repeats" option to fix it such that repeated SQL gets ellided
      except for placeholders
    - Highlight transaction keywords
    - Highlight HAVING
    - Leave quotes from DBIC in bindargs
    - Add error checking on "profile" for SQLA::Tree
    - Hide bulk inserts from DBIx::Class
    - Fix missing doc (RT#62587)
    - Format functions in MySQL-friendly manner foo( ... ) vs foo ( ... )

revision 1.69  2010-10-22
----------------------------