@@ -1,5 +1,17 @@
 Revision history for SQL::Abstract
 
+trial revision 1.74_01  2013-12-18
+----------------------------
+
+    - *UPCOMING INCOMPATIBLE BUGFIX*: SQLA used to generate incorrect SQL
+      on undef-containing lists fed to -in and -not_in. An exception will
+      be raised for a while before properly fixing this, to avoid quiet
+      but subtle changes to query results in production
+
+    - Fix false negative comparison of ORDER BY <function> ASC
+    - More improvements of incorrect parsing (literal at end of list elt)
+    - Fix typos in POD and comments (RT#87776)
+
 revision 1.74  2013-06-04
 ----------------------------
     - Fix insufficient parenthesis unroll during operator comparison
